2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Fixed the banter-44 icon to be giver-44
	* src/Application.cs: Fixed up icon so it's off if nobody is there

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Updated the alignment of the menu items

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ComplexMenuItem.cs: code to handle cool new complex menu items
	* src/GiverMenuItem.cs: New menu item to handle graphics and such
	* src/Defines.cs.in: removed unneeded definitions
	* src/Application.cs: Added new menu support with graphics
	* src/ServiceLocator.cs: Updated to provide a count of current services
	  found
	* src/Makefile.am: Added new files
	* giver.mdp: Updated for new files
	* data/images/Makefile.am: Addded new back and white image
	* data/images/giveroff-24.png: new "off" image

2007-06-25  Scott Reeves <sreeves@novell.com> 

	* TODO: add todo item

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Application.cs: Updated menu with more information

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: Added code to correctly remove a service when
	  it goes down

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: New service to advertize service
	* src/Application.cs: Added Service Locator
	* src/ServiceLocator.cs: Giver Service Locator to find giver instances
	* src/Makefile.am: ADded files that needed to be built
	* giver.mdp: Updated to mono 2.0

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: new service to advertise and transfer files
	* src/Application.cs: Started Giver Service
	* src/Makefile.am: Added service to build
	* giver.mdp: Added Avahi Dependency

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs, src/Makefile.am, src/TrayLib.cs, giver.mdp,
	  configure.ac: Added GiverService and TRayLib.cs

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 
